--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
 	"devDependencies": {
+		"dotenv": "^8.0.0",
 		"jest": "^23.6.0",
+		"nodemon": "^1.19.0",
 		"supertest": "^3.3.0"
 	},
 	"dependencies": {
 		"express": "^4.16.4",
 		"helmet": "^3.18.0",
 		"knex": "^0.16.5",
-		"nodemon": "^1.19.0",
 		"sqlite3": "^4.0.8"
 	}
 }
